<resources>
    <string name="app_name">Italk</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_1_0_0">Version 1.0.0</string>

    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="logout">Logout</string>
    <string name="name_not_be_emty">Name cannot be empty</string>
    <string name="Emai_must_right_the_format">Emai must right the format</string>
    <string name="Password_is_at_least_6_characters">Password is at least 6 characters</string>
    <string name="good_job">Good job !</string>
    <string name="Error">Error...</string>
    <string name="chat">Chat</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="change_password">Change password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="comment">Comment</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="cofirm">Cofirm</string>
    <string name="delete">Delete</string>
    <string name="update_name">Update name</string>
    <string name="home">Home</string>
    <string name="what_are_you_thinking">What are you thinking...?</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="notification">Notification</string>
    <string name="write_post">Write post</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">REGISTER</string>
    <string name="setting">Setting</string>
    <string name="edit_name">Edit name</string>
    <string name="update_password">Update password</string>
    <string name="no_notification_here">No notification here</string>
    <string name="see_like">See like</string>
    <string name="list_blocked">Record blocked</string>
    <string name="unblock_succesfuly">Unblock Succesfuly</string>
    <string name="unblock_message_this_people">"Unblock message this people "</string>
    <string name="block_message_this_people">"Block message this people "</string>
    <string name="enter_friends_need_to_find">"Enter friends need to find</string>
    <string name="update_successful">Update successful</string>
    <string name="update_failed">Update failed</string>
    <string name="Comment_your_post">Comment your post</string>
    <string name="error"> Error : </string>
    <string name="Comment_failed">Comment failed</string>
    <string name="Post_successful">Post successful</string>
    <string name="Please_enable_camera_permissions">Please enable camera permissions</string>
    <string name="Please_enable_gallery_permissions">Please enable gallery permissions</string>
    <string name="Please_enter_the_article_description_or_image">Please enter the article description or image</string>
    <string name="Loading">Loading...</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="View_Detail">View Detail</string>
    <string name="Delete_successful">Delete successful</string>
    <string name="Like_your_post">like your post</string>
    <string name="Please_Enter_comment">Please ! Enter comment</string>
    <string name="Comment_successful">Comment successful</string>
    <string name="Offline_at">Offline at : </string>
    <string name="Please_Enter_your_message">Please ! Enter your message</string>
    <string name="noSuport">Your device doesn\'t support Speech Recognition</string>
    <string name="Say_something">Say something</string>
    <string name="LOGIN">LOGIN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Sent_a_photo">Sent a photo</string>
    <string name="Email_cannot_be_empty">Email cannot be empty</string>
    <string name="Login_succesful">"Login succesful !"</string>
    <string name="Login_ailed">Login failed.</string>
    <string name="Password_must_not_be_empty">Password must not be empty</string>
    <string name="Name_must_be_greater_than_6_characters">Name must be greater than 6 characters !</string>
    <string name="You_clicked_button">You clicked button !</string>
    <string name="Authentication_failed">Authentication failed.</string>
    <string name="Seen">Seen</string>
    <string name="Sent">Sent</string>
    <string name="Deleted">Deleted</string>
    <string name="You_just_only_delete_your_messages">You can just  only delete your messages</string>
    <string name="Post">Post</string>
    <string name="select_picture">Select picture</string>
    <string name="description">Description...</string>
    <string name="your_status">Your status...</string>
    <string name="Search">Search</string>
    <string name="View_profile">View profile</string>
    <string name="Delete_failed">Delete failed</string>
    <string name="Like"> Like</string>
    <string name="PeopleLike"> Like</string>
    <string name="Logout">Log out</string>
    <string name="Confirm"> Confirm</string>
    <string name="Are_you_sure">Are you sure ?</string>
    <string name="Enter_your_name">Please ! Enter your name</string>
    <string name="Name_must_be_characters">Name must be characters</string>
    <string name="like_post">Like post</string>
    <string name="friend">Friend</string>
    <string name="Unblock_Succesfuly">Unblock Succesfuly</string>
    <string name="You_can_send_message">You can\'t send message</string>
    <string name="please_write_something">Please write something...</string>
    <string name="done">Done</string>
    <string name="Confirm_your_password">Confirm your password</string>
    <string name="Incorrect">Incorrect</string>
    <string name="profile">Profile</string>
    <string name="me">Profile</string>
    <string name="change_name">Change name</string>
    <string name="list_user_blocked">List user blocked</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="report_problem">Report problem</string>
    <string name="Do_you_want_delete_this_notification">Do you want delete this notification ?</string>
    <string name="last_day">  last day</string>
    <string name="name">name</string>
    <string name="time">Time</string>
    <string name="Recover">Recover</string>
    <string name="Please_check_your_mail">Please check your email</string>
    <string name="Email_does_not_exist">Email does not exist</string>
    <string name="Sending_your_email">Sending your email...</string>
    <string name="account_and_suport">Account and suport</string>
    <string name="you_have_no_messages_here">You have no messages here !</string>
    <string name="Do_you_want_delete_this_comment">Do you want delete this comment ?</string>
    <string name="You_not_delete_this_commment">You can\'t delete this commment</string>
    <string name="Send_a_photo">Send a photo</string>
    <string name="Send_email">Send email</string>
    <string name="Typing">Typing...</string>
    <string name="not_have_any_comment">Not have any comment</string>
    <string name="please_be_the_first_comment">Please be the first comment</string>
    <string name="select">Select</string>
    <string name="language">Language</string>
    <string name="this_people_no_status">This people no status</string>
    <string name="no_account_here">No account here</string>
    <string name="Are_you_want_to_download_this_image">Are you want to download this image ?</string>
    <string name="Download">Download</string>
    <string name="detail">Detail</string>

    <string name="group_name">Group name</string>
    <string name="group_role">group role</string>
    <string name="create_group">Create Group</string>
    <string name="Enter_group_name_need_to_find">Enter group name need to find</string>

    <string name="Remove_Admin">Remove Admin</string>
    <string name="Remove_User">Remove User</string>
    <string name="Make_Admin">Make Admin</string>
    <string name="Add_this_user_into_this_group">Add this user into this group?</string>
    <string name="Add">Add</string>
    <string name="The_user_is_no_longer_admin">The user is no longer admin</string>
    <string name="The_user_is_now_admin">The user is now admin</string>
    <string name="Added_successfully">Added successfully</string>
    <string name="Add_member">Add member</string>
    <string name="Creator_of_Groug">Creator of Group...</string>

    <string name="Creator">Creator</string>
    <string name="Member">Member</string>
    <string name="Admin">Admin</string>

    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="edit_group">Edit group</string>
    <string name="group_name_require">Group name is required...</string>
    <string name="group_info_update">Group info updated..</string>
    <string name="list_member">List member</string>
    <string name="Search_group">Search group</string>

    <string name="leave_group">Leave group</string>
    <string name="change_group_info">Change group info</string>
    <string name="Delete_group">Delete group</string>
    <string name="Are_you_sure_want_to_Delete_group">Are you sure want to Delete group ?</string>
    <string name="Are_you_sure_want_to_Leave_group">Are you sure want to Leave group ?</string>
    <string name="Group_left_successfully">Group left successfully</string>
    <string name="Group_deleted">Group deleted..</string>
    <string name="Copy_content">Copy content</string>
    <string name="Copied">Copied</string>
    <string name="block_message">Block message</string>
    <string name="Unblock_message">Unblock message</string>
    <string name="Block_Succesfuly">Block Succesfuly...</string>
    <string name="Please_enter_your_group_name">Please enter your group name</string>
    <string name="Group_created">Group created</string>
    <string name="No_internet_connection">"No internet connection! "</string>
    <string name="Go_settings">Go settings</string>
    <string name="online">Online</string>
    <string name="follow">Follow</string>
    <string name="Internet_connected">Internet connected</string>
    <string name="peoplelikexml">" " Like</string>
    <string name="commentpeoplexml">0 Comment</string>
    <string name="Unfollow">Unfollow</string>
    <string name="Follow">Follow</string>
    <string name="New_message">New message</string>
    <string name="are_you_delete_this_message">Are you delete this message ?</string>
    <string name="are_you_delete_this_conversation">Are you delete this conversation ?</string>
    <string name="Morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Evening">Evening</string>
    <string name="May_this">"May this "</string>
    <string name="happy">,\nwish you have a great time</string>
    <string name="hi">Hi! </string>
    <string name="recent_converstation">Recent converstation</string>
    <string name="password_is_incorrect">The confirmation password is incorrect</string>
    <string name="download_image">Download image</string>
    <string name="copy_url_image">Copy url image</string>
    <string name="profile_account">Profile</string>

</resources>
