<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_transparent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/confirmTv"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/cofirm"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_below="@id/confirmTv"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:text="@string/are_you_delete_this_conversation"
        android:id="@+id/messagCfTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_below="@id/messagCfTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:background="@color/greynhat3"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/cancelBtn"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/cancelTv"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:fontFamily="@font/mo_me"
                    android:textColor="@color/blackNhat2"
                    android:textStyle="bold"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_gravity="center_horizontal"
                android:background="@color/greynhat3"
                android:layout_width="0.3dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/deleteBtn"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/updatetv"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/mo_me"
                    android:textColor="@color/red"
                    android:text="@string/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>