<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/bottomSheetContainer"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/background_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/select"
                    android:textSize="16dp"
                    android:textColor="@color/blackNhat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/greynhat3"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cameraBtn"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/actionTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />
            </LinearLayout>
            <View
                android:background="@color/greynhat3"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/galleryBtn"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/gallery"
                    android:textSize="16dp"
                    android:textColor="@color/blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
     <LinearLayout
         android:id="@+id/cancelBtn"
         android:padding="16dp"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:background="@drawable/background_transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:text="@string/cancel"
             android:textSize="16dp"
             android:textColor="@color/red"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
</LinearLayout>