<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_item_user"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginBottom="3dp"
    app:cardUseCompatPadding="true"
  >
    <LinearLayout
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarIv"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/main"
            app:civ_border_width="0.8dp"
            android:src="@drawable/avatar_default"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/nameTv"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/worksans_regular"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/notificationTv"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/worksans_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"/>
            </LinearLayout>
            <TextView
                android:id="@+id/timeTv"
                android:textSize="12sp"
                android:fontFamily="@font/worksans_regular"
                android:textColor="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="3dp"
        android:layout_alignParentBottom="true"
        android:background="@color/greynhat3"/>

</RelativeLayout>